fixes font-size to be smaller on auctions#show page in order to fix the buttons from overflowing for smaller screen sizes

--- a/app/assets/stylesheets/auctions.scss
+++ b/app/assets/stylesheets/auctions.scss
@@ -24,6 +24,7 @@ select#auction_condition {
 .real-btn {
   width: 100%;
   padding: 11px 0;
+  font-size: 10px;
 }
 
 .remove-btn form{
@@ -403,6 +404,14 @@ ul.checkout-bar {
       }
     }
   }
+}
+
+#invited-suppliers {
+  font-size: 12px;
+}
+
+#bid-aero-suppliers {
+  font-size: 12px;
 }
 
 .card.large.destination-address {
